--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@
 
 body {
   color: var(--primary-text-color);
-  background-color: var(--primary-bg-color);
+  background-color: var(--header-bg-color);
 
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
@@ -234,8 +234,16 @@ img {
   padding-top: 200px;
   padding-bottom: 200px;
 
+  max-width: 1600px;
+  margin-right: auto;
+  margin-left: auto;
+
   background-color: var(--hero-bg-color);
   text-align: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(47, 48, 58, 0.4)),
+    url(../images/hero-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .hero-title {
@@ -366,12 +374,12 @@ img {
 .team-card-text {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: var(--header-bg-color);
+  /* background-color: var(--header-bg-color); */
 }
 
 /* Секция Примеры работ */
 .example {
-  background-color: var(--header-bg-color);
+  /* background-color: var(--header-bg-color); */
 }
 
 .filter-list {
