--- a/css/styles.css
+++ b/css/styles.css
@@ -325,6 +325,21 @@ img {
   flex-basis: calc((100% / 4) - var(--card-set-gap));
 }
 
+.advantages-item-box {
+  width: 270px;
+  height: 120px;
+  border-radius: 4px;
+  padding: 25px 100px;
+  margin-bottom: 30px;
+
+  background-color: var(--primary-bg-color);
+}
+
+.advantages-icon {
+  width: 70px;
+  height: 70px;
+}
+
 .advantages-list-title {
   margin-bottom: 10px;
 
