--- a/css/styles.css
+++ b/css/styles.css
@@ -412,7 +412,49 @@ img {
   background-color: var(--header-bg-color);
 }
 
+/* Секция Постоянные клиенты */
+
+.clients-list {
+  margin-left: calc(-1 * var(--card-set-gap));
+  margin-bottom: calc(-1 * var(--card-set-gap));
+
+  display: flex;
+}
+
+.clients-item {
+  margin-left: var(--card-set-gap);
+  margin-bottom: var(--card-set-gap);
+
+  flex-basis: calc((100% / 5) - var(--card-set-gap));
+}
+
+.clients-item-box {
+  width: 170px;
+  height: 92px;
+  padding: 16px 32px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+}
+
+.clients-icon {
+  width: 106px;
+  height: 60px;
+
+  fill: #afb1b8;
+}
+
+.clients-item .link:hover .clients-icon,
+.clients-item .link:focus .clients-icon {
+  fill: var(--primary-accent-color);
+}
+
+.clients-item .link:hover .clients-item-box,
+.clients-item .link:focus .clients-item-box {
+  border: 1px solid var(--primary-accent-color);
+}
+
 /* Секция Примеры работ */
+
 /* .example {
   background-color: var(--header-bg-color);
 } */
