--- a/css/styles.css
+++ b/css/styles.css
@@ -519,6 +519,12 @@ img {
   margin-right: 8px;
 }
 
+.card-thumb:hover,
+.card-thumb:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 /* Карточки секции Примеры */
 
 /* .card-thumb > img {
