--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,11 @@ img {
   font-size: 16px;
   line-height: 1.62;
   letter-spacing: inherit;
+
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .button.primary:hover,
@@ -407,6 +412,9 @@ img {
   margin-left: var(--card-set-gap);
 
   flex-basis: calc((100% / 4) - var(--card-set-gap));
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .team-list .title {
